# Firmware-Salvador

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  Readme.md  TOOLCHAIN_VERSION  boost_sysroot.cmake  g1_sdk.cmake  install.bash  main.cpp  sim_toolchains.cmake
agent_guidelines/: code_style.md  g1_safety.md  implementation_phases.md  module_contracts.md  testing_checklist.md
agents/: CMakeLists.txt  agent_runner.cpp  dribble.cpp  dribble.h  g1_ball_behavior.h  g1_ball_fallback.h  g1_ready_walk.h  localize.cpp  localize.h  search_ball.cpp  search_ball.h  walk_to_pos.cpp  walk_to_pos.h
camera/: CMakeLists.txt  camera.cpp
g1_adapters/: CMakeLists.txt  g1_detection_geometry.h  g1_external_adapters.cpp  g1_external_adapters.h  g1_ready_location_filter.h
game_controller/: CMakeLists.txt  README_GameController.md  README_GameController3.md  game_controller.cpp  game_controller.h
head_control_nao/: head_control.cpp  head_control.h
motion_connector/: CMakeLists.txt  motion_connector_g1.cpp  motion_connector_g1.h
sensor/: CMakeLists.txt  sensor.cpp  sensor.h
team_com/manager/: tc_manager.cpp
team_com/network/: tc_network.h
team_com/pub_sub/: tc_data.h
team_strategy/: robocup_strategy.cpp  robocup_strategy.h  team_strategy.cpp
team_strategy/features/: ready_positioning.cpp
utils/: cam_constants.h
